Adicionando logo na home

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
         <ul class="menuBar">
           <div class="icon" >
           <li class="menuIcon"><a href=""><img src="img/menuIcon.png"/></a></li> 
-          <li class="homeIcon"><a href=""><img src="img/logo2.png"/></a></li>
+          <li class="homeIcon"><a href=""><img src="img/logo-home1-removebg-preview.jpg" id="img-logo-home"/></a></li>
           <li class="configIcon"><a href="config.html"><img src="img/configIcon.png"/></a></li>
           </div>
       </ul>
