Adicionando botão camera

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
         <ul class="menuBar">
           <div class="icon" >
           <li class="menuIcon"><a href=""><img src="img/menuIcon.png"/></a></li> 
-          <li class="homeIcon"><a href=""><img src="img/logo-home1-removebg-preview.jpg" id="img-logo-home"/></a></li>
+          <li class="homeIcon"><a href=""><img src="img/logo-home.jpg" id="img-logo-home"/></a></li>
           <li class="configIcon"><a href="config.html"><img src="img/configIcon.png"/></a></li>
           </div>
       </ul>
@@ -32,7 +32,7 @@
         </div>
 
         <button id="compare" onclick="compare()">comparar</button>
-        <button class="buttom-entrar" id="cameraApp">camera</button>
+        <button class="buttom-entrar" id="cameraApp"><img src="img/cameraIcon.png" alt=""></button>
             
         <script type="text/javascript">
             const CLIENT_ID ="0f6ee2b06618621";
