Adicionando imagem do botão camera

--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <button id="compare" onclick="compare()">comparar</button>
-        <button class="buttom-entrar" id="cameraApp"><img src="img/cameraIcon.png" alt=""></button>
+        <button class="buttom-camera" id="cameraApp"><img src="img/cameraIcon.png" alt=""></button>
             
         <script type="text/javascript">
             const CLIENT_ID ="0f6ee2b06618621";
