Adicionando botão da galeria

--- a/www/index.html
+++ b/www/index.html
@@ -22,9 +22,11 @@
       <img id="img-avatar" src="img/avatar.jpeg" alt="">
 
         <form id="upload-form" action="" method="POST" enctype="multipart/form-data">
-                <input type="file" id="file" name="file" name="submit">
+                <label class="btn-upload">
+                    <input type="file" id="file" name="file" name="submit">
+                    <button class="btn"><img src="img/icons8-fotografia-48.png" alt=""></button>
+                </label>
                 <input type="submit" id="sendImage" value="ENVIA IMAGEM">
-                <input type="password" name="Senha" id="password">
         </form>
 
         <div id="gallery">
