Atualização dos botoes

--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
         <form id="upload-form" action="" method="POST" enctype="multipart/form-data">
                 <label class="btn-upload">
                     <input type="file" id="file" name="file" name="submit">
-                    <button class="btn"><img src="img/icons8-fotografia-48.png" alt=""></button>
+                    <button class="btn-"><img src="img/galleryIcon.png" alt=""></button>
                 </label>
                 <input type="submit" id="sendImage" value="ENVIA IMAGEM">
         </form>
