Atualizações de botoes

--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
 
                 <label class="bnt-action">
                     <input type="submit" id="action" >
-                    <button class="btn-action"><img src="img/actionIcon.png" ></button>
+                    <button class="btn-action"><img src="img/actionIcon.png"></button>
                 </label>
                 
         </form>
@@ -38,8 +38,8 @@
           <!---->
         </div>
 
-        <button id="compare" onclick="compare()">comparar</button>
-        <button class="buttom-camera" id="cameraApp"><img src="img/cameraIcon.png" alt=""></button>
+        <!--<button id="compare" onclick="compare()">comparar</button>-->
+        <button class="buttom-camera" id="cameraApp"><img src="img/cameraIcon.png" ></button>
             
         <script type="text/javascript">
             const CLIENT_ID ="0f6ee2b06618621";
