Edições na cadstro.html

--- a/www/cadastro.html
+++ b/www/cadastro.html
@@ -19,6 +19,8 @@
                 <img class="imglogo" src="img/logo2.png" alt="">
             </div>
             <h2>Cadastro</h2>
+            <a class="message">Venha ser um Naicer!</a>
+            <p><a class="message">Preencha os dados abaixo para o cadastro.</a></p>
             <label for="email">E-mail</label>
             <input type="email"
               id="email" 
