Aletrações  na pagina de redefinir senha

--- a/www/redefinirSenha.html
+++ b/www/redefinirSenha.html
@@ -25,6 +25,7 @@
              id="email" 
              placeholder="Digite seu e-mail" 
             >
+            <a id="tip">Verifique se você recebeu um email com o link para redefinir sua senha.</a>
             <button onclick="newPassword()" class="buttom-entrar">Redefinir senha</button>
             <div id="register-container">
               <p>Já tem uma conta?</p>
