Mudanças no css da pagina de redefinir senha

--- a/www/redefinirSenha.html
+++ b/www/redefinirSenha.html
@@ -19,13 +19,13 @@
                 <img class="imglogo" src="img/logo2.png" alt="">
             </div>
             <h2>Esqueceu sua senha?</h2>
-            <a class="message">Para recuperar sua senha, insira o e-mail cadastrado no aplicativo.</a>
+            <a class="message">Insira o e-mail cadastrado no aplicativo para receber
+                 um email com o link para redefinir sua senha.</a>
             <label for="email">E-mail</label>
             <input type="email" 
              id="email" 
              placeholder="Digite seu e-mail" 
             >
-            <a id="tip">Verifique se você recebeu um email com o link para redefinir sua senha.</a>
             <button onclick="newPassword()" class="buttom-entrar">Redefinir senha</button>
             <div id="register-container">
               <p>Já tem uma conta?</p>
