--- a/www/index.html
+++ b/www/index.html
@@ -1,48 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/index.css">
-      <!-- The core Firebase JS SDK is always required and must be listed first -->
-      <script src="cordova.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-auth.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-analytics.js"></script>
-      <script src="js/index.js"></script>
-      <script src="js/configFirebase.js"></script>
+    <title>Notification Example</title>
+
+    <script type="text/javascript" charset="utf-8" src="cordova-1.5.0.js"></script>
+    <script type="text/javascript" charset="utf-8">
+
+    // Wait for PhoneGap to load
+    //
+    document.addEventListener("deviceready", onDeviceReady, false);
+
+    // PhoneGap is ready
+    //
+    function onDeviceReady() {
+        // Empty
+    }
+
+    // alert dialog dismissed
+    function alertDismissed() {
+        // do something
+    }
+
+    // Show a custom alert
+    //
+    function showAlert() {
+        navigator.notification.alert(
+            'You are the winner!',  // message
+            alertDismissed,         // callback
+            'Game Over',            // title
+            'Done'                  // buttonName
+        );
+    }
+
+    </script>
   </head>
   <body>
-    <div id="login-container">
-      <div class="imgLogo">
-        <img class="imglogo" src="img/logo2.png" alt="">
-      </div>
-      <h2>Login</h2>
-      <form action="">
-        <label for="email">E-mail</label>
-        <input type="email" 
-          name="email" 
-          id="email" 
-          placeholder="Digite seu e-mail" 
-          autocomplete="off" 
-          required
-        >
-        <label for="password">Senha</label>
-        <input type="password" 
-          name="password" 
-          id="password"
-          placeholder="Digite sua senha"
-          required
-        >
-        <a href="redefinirSenha.html" id="forgot-pass">Esqueceu a senha?</a>
-        <buttom type="buttom" class="buttom-entrar" onclick="logar()">Entrar</buttom>
-      </form>
-      <div id="register-container">
-        <p>Ainda não tem conta?</p>
-        <a href="cadastro.html">Cadastre-se!</a>
-      </div>
-    </div>
+    <p><a href="#" onclick="showAlert(); return false;">Show Alert</a></p>
   </body>
 </html>
