Teste de notificação

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,6 @@
     </script>
   </head>
   <body>
-    <p><a href="#" onclick="showAlert(); return false;">Show Alert</a></p>
+    <p><a href="#" onclick="showAlert();">Show Alert</a></p>
   </body>
 </html>
