--- a/www/home.html
+++ b/www/home.html
@@ -57,7 +57,7 @@
             } 
             
             const addImage = (url) =>{
-                gallery.innerHTML = `<img src="${url}" width="150" />`;
+                gallery.innerHTML = `<img src="${url}" width="150" id="image"/>`;
             }
 
             const onSuccess = (result) => {
