Alteração no icone do botão camera

--- a/www/home.html
+++ b/www/home.html
@@ -39,7 +39,7 @@
         </div>
 
         <!--<button id="compare" onclick="compare()">comparar</button>-->
-        <button class="buttom-camera" id="cameraApp"><img src="img/cameraIcon.png" ></button>
+        <button class="buttom-camera" id="cameraApp"><img src="img/cameraIcon (2).png" ></button>
             
         <script type="text/javascript">
             const CLIENT_ID ="0f6ee2b06618621";
