Troca de avatar

--- a/www/home.html
+++ b/www/home.html
@@ -19,7 +19,7 @@
           </div>
       </ul>
        
-      <img id="img-avatar" src="img/avatar.jpeg" alt="">
+      <img id="img-avatar" src="img/avatar2.jpeg" alt="">
 
         <form id="upload-form" action="" method="POST" enctype="multipart/form-data">
                 <label class="btn-upload">
