--- a/www/home.html
+++ b/www/home.html
@@ -19,7 +19,7 @@
           </div>
       </ul>
        
-      <img id="img-avatar" src="img/avatar3.jpeg" alt="">
+      <img id="img-avatar" src="img/avatar.jpeg" alt="">
 
         <form id="upload-form" action="" method="POST" enctype="multipart/form-data">
                 <label class="btn-upload">
@@ -39,7 +39,7 @@
         </div>
 
         <!--<button id="compare" onclick="compare()">comparar</button>-->
-        <button class="buttom-camera" id="cameraApp"><img src="img/cameraIcon (2).png" ></button>
+        <button class="buttom-camera" id="cameraApp"><img src="img/cameraIcon.png" ></button>
             
         <script type="text/javascript">
             const CLIENT_ID ="0f6ee2b06618621";
