--- a/www/config.html
+++ b/www/config.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
         <title>Confugurações</title>
+        <script src="js/index.js"></script>
         <link rel="stylesheet" href="css/config.css">
     </head>
     <body>
@@ -12,14 +13,12 @@
             <div class="app">
                 <ul class="menuBar">
                 <div class="icon" >
-                    <li class="menuIcon"><a href="">Sobre nós</a></li> 
-                    <li class="homeIcon"><a href="">Sair</a></li>
+                    <button type="buttom" id="sair" onclick="sair()">Sair</button>
                     </div>
                 </ul>
             </div>
         </div>
         <script src="cordova.js"></script>
-        <script src="js/index.js"></script>
 
     </body>
 </html>
