--- a/www/senha.html
+++ b/www/senha.html
@@ -10,6 +10,8 @@
     senha: <input type="password" id="password">
     <input type="image" <img src="https://img.icons8.com/ios/50/000000/visible--v2.png" onclick="showPassword();">
 
+    <button><img src="img/confirmIcon.png" alt=""></button>
+    <button><img src="img/cancelIcon.png" alt=""></button>
     <script>
         function showPassword(){
             var senha=document.getElementById("password");
