--- a/www/home.html
+++ b/www/home.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Teste upload TESTE.HTML</title>
+        <title>Home</title>
         <script src="https://cdnjs.deepai.org/deepai.min.js"></script>
         <script src="js/index.js"></script>
         <link rel="stylesheet" href="css/home.css">
