--- a/www/senha.html
+++ b/www/senha.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Comemoração</title>
+    <script src="js/index.js"></script>
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     senha: <input type="password" id="password">
@@ -23,5 +25,9 @@
             }
         }
     </script>
+    <video width="320" height="240" autoplay>
+        <source src="img/WhatsApp Video 2021-06-15 at 18.32.15.mp4" type="video/mp4">
+        Your browser does not support the video tag
+      </video>
 </body>
 </html>
