--- a/www/home.html
+++ b/www/home.html
@@ -40,7 +40,7 @@
 
         <!--<button id="compare" onclick="compare()">comparar</button>-->
         <button class="buttom-camera" id="cameraApp"><img src="img/cameraIcon (2).png" ></button>
-        <button class="bnt-confirm"><img src="img/confirmIcon.png" alt=""></button>
+        <button class="bnt-confirm"><img src="img/confirmIcon.png" onclick="window.location.href = 'comemoracao.html'"></button>
         <button class="bnt-cancel"><img src="img/cancelIcon.png" alt=""></button>
             
         <script type="text/javascript">
