--- a/www/senha.html
+++ b/www/senha.html
@@ -25,9 +25,6 @@
             }
         }
     </script>
-    <video width="320" height="240" autoplay>
-        <source src="img/WhatsApp Video 2021-06-15 at 18.32.15.mp4" type="video/mp4">
-        Your browser does not support the video tag
-      </video>
+    <img src="img/avatar.gif" width="150" alt="">
 </body>
 </html>
