nova tela de comemoração + ajustes

--- a/www/comemoracao.html
+++ b/www/comemoracao.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home</title>
+        <title>Comemoracao</title>
         <script src="https://cdnjs.deepai.org/deepai.min.js"></script>
         <script src="js/index.js"></script>
         <link rel="stylesheet" href="css/home.css">
@@ -18,10 +18,17 @@
           <li class="configIcon"><a href="config.html"><img src="img/configIcon.png"/></a></li>
           </div>
       </ul>
-       
-      <img id="img-avatar" src="img/avatar.gif" width="100">
-
-        <button class="bnt-confirm"><img src="img/confirmIcon.png" onclick="window.location.href = 'home.html'"></button>
+       <h1>Parabéns!</h1>
+       <p align=center>
+         <img id="img-avatar" src="img/avatar.gif" width="100">
+       </p>
+      <p>Com a sua coleta foram salvos tartarugas e inumeras especies de animais marinhos !</p>
+      <p>✨🐬🐠🐢🦀🐳🐙✨</p>
+  
+        <label class="bnt-action">
+          <input type="" id="action" >
+          <button class="btn-action"><img src="img/voltar.png" onclick="window.location.href = 'home.html'"></button>
+      </label>
      </div>
     </body>
 </html>
