--- a/www/redefinirSenha.html
+++ b/www/redefinirSenha.html
@@ -20,7 +20,7 @@
             </div>
             <h2>Esqueceu sua senha?</h2>
             <a class="message">Insira o e-mail cadastrado no aplicativo para receber
-                 um email com o link para redefinir sua senha.</a>
+                  o link para redefinir sua senha.</a>
             <label for="email">E-mail</label>
             <input type="email" 
              id="email" 
