Testando funçã da camera

--- a/www/comemoracao.html
+++ b/www/comemoracao.html
@@ -27,7 +27,7 @@
   
         <label class="bnt-action">
           <input type="" id="action" >
-          <button class="btn-action"><img src="img/voltar.png" onclick="window.location.href = 'home.html'"></button>
+          <button class="btn-voltar"><img src="img/voltar.png" onclick="window.location.href = 'home.html'"></button>
       </label>
      </div>
     </body>
