--- a/www/index.html
+++ b/www/index.html
@@ -1,48 +1,134 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/index.css">
-      <!-- The core Firebase JS SDK is always required and must be listed first -->
-      <script src="cordova.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-auth.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-analytics.js"></script>
-      <script src="js/index.js"></script>
-      <script src="js/configFirebase.js"></script>
+    <title>Comemoração</title>
+    <script src="js/index.js"></script>
+    <link rel="stylesheet" href="css/home.css">
+</head>
+<body>
+    senha: <input type="password" id="password">
+    <input type="image" <img src="https://img.icons8.com/ios/50/000000/visible--v2.png" onclick="showPassword();">
+
+    <button onclick="camera()">camera</button>
+    
+    <script>
+        function showPassword(){
+            var senha=document.getElementById("password");
+            if(senha.type=="password"){
+                senha.type="text";
+            
+            }else{
+                senha.type="password";
+            }
+        }
+    </script>
+    <img src="img/avatar.gif" width="150" alt="">
+</body>
+</html>-->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Capture Photo</title>
+
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <script type="text/javascript" charset="utf-8">
+
+    var pictureSource;   // picture source
+    var destinationType; // sets the format of returned value
+
+    // Wait for device API libraries to load
+    //
+    document.addEventListener("deviceready",onDeviceReady,false);
+
+    // device APIs are available
+    //
+    function onDeviceReady() {
+        pictureSource=navigator.camera.PictureSourceType;
+        destinationType=navigator.camera.DestinationType;
+    }
+
+    // Called when a photo is successfully retrieved
+    //
+    function onPhotoDataSuccess(imageData) {
+      // Uncomment to view the base64-encoded image data
+      // console.log(imageData);
+
+      // Get image handle
+      //
+      var smallImage = document.getElementById('smallImage');
+
+      // Unhide image elements
+      //
+      smallImage.style.display = 'block';
+
+      // Show the captured photo
+      // The inline CSS rules are used to resize the image
+      //
+      smallImage.src = "data:image/jpeg;base64," + imageData;
+    }
+
+    // Called when a photo is successfully retrieved
+    //
+    function onPhotoURISuccess(imageURI) {
+      // Uncomment to view the image file URI
+      // console.log(imageURI);
+
+      // Get image handle
+      //
+      var largeImage = document.getElementById('largeImage');
+
+      // Unhide image elements
+      //
+      largeImage.style.display = 'block';
+
+      // Show the captured photo
+      // The inline CSS rules are used to resize the image
+      //
+      largeImage.src = imageURI;
+    }
+
+    // A button will call this function
+    //
+    function capturePhoto() {
+      // Take picture using device camera and retrieve image as base64-encoded string
+      navigator.camera.getPicture(onPhotoDataSuccess, onFail, { quality: 50,
+        destinationType: destinationType.DATA_URL });
+    }
+
+    // A button will call this function
+    //
+    function capturePhotoEdit() {
+      // Take picture using device camera, allow edit, and retrieve image as base64-encoded string
+      navigator.camera.getPicture(onPhotoDataSuccess, onFail, { quality: 20, allowEdit: true,
+        destinationType: destinationType.DATA_URL });
+    }
+
+    // A button will call this function
+    //
+    function getPhoto(source) {
+      // Retrieve image file location from specified source
+      navigator.camera.getPicture(onPhotoURISuccess, onFail, { quality: 50,
+        destinationType: destinationType.FILE_URI,
+        sourceType: source });
+    }
+
+    // Called if something bad happens.
+    //
+    function onFail(message) {
+      alert('Failed because: ' + message);
+    }
+
+    </script>
   </head>
   <body>
-    <div id="login-container">
-      <div class="imgLogo">
-        <img class="imglogo" src="img/logo2.png" alt="">
-      </div>
-      <h2>Login</h2>
-      <form action="">
-        <label for="email">E-mail</label>
-        <input type="email" 
-          name="email" 
-          id="email" 
-          placeholder="Digite seu e-mail" 
-          autocomplete="off" 
-          required
-        >
-        <label for="password">Senha</label>
-        <input type="password" 
-          name="password" 
-          id="password"
-          placeholder="Digite sua senha"
-          required
-        >
-        <a href="redefinirSenha.html" id="forgot-pass">Esqueceu a senha?</a>
-        <buttom type="buttom" class="buttom-entrar" onclick="logar()">Entrar</buttom>
-      </form>
-      <div id="register-container">
-        <p>Ainda não tem conta?</p>
-        <a href="cadastro.html">Cadastre-se!</a>
-      </div>
-    </div>
+    <button onclick="capturePhoto();">Capture Photo</button> <br>
+    <button onclick="capturePhotoEdit();">Capture Editable Photo</button> <br>
+    <button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">From Photo Library</button><br>
+    <button onclick="getPhoto(pictureSource.SAVEDPHOTOALBUM);">From Photo Album</button><br>
+    <img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
+    <img style="display:none;" id="largeImage" src="" />
   </body>
 </html>
