--- a/www/index.html
+++ b/www/index.html
@@ -80,6 +80,6 @@
   </head>
   <body>
     <button onclick="capturePhoto();">Capture Photo</button> <br>
-    <img style="display:none;width:160px;height:160px;" id="smallImage" src="" />
+    <img style="display:none;width:160px;height:160px;position: relative;top: 50px;right: 70;" id="smallImage" src="" />
   </body>
 </html>
