--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
 <html>
   <head>
     <title>Capture Photo</title>
-
+    <link rel="stylesheet" href="css/home.css">
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8">
 
@@ -79,7 +79,7 @@
     </script>
   </head>
   <body>
-    <button onclick="capturePhoto();">Capture Photo</button> <br>
+    <button onclick="capturePhoto();"><img src="img/cameraIcon (2).png" ></button> <br>
     <img style="display:none;width:160px;height:160px;position: relative;top: 50px;right: 70;" id="smallImage" src="" />
   </body>
 </html>
