--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <!--<button id="compare" onclick="compare()">comparar</button> <button class="buttom-camera" id="cameraApp" onclick="capturePhoto();"><img src="img/cameraIcon (2).png"></button>-->
-        <button onclick="capturePhoto();"><img src="img/cameraIcon (2).png" ></button> <br>
+        <button class="buttom-camera" id="cameraApp" onclick="capturePhoto();">camera</button>
         <button class="bnt-confirm"><img src="img/confirmIcon.png" onclick="window.location.href = 'comemoracao.html'"></button>
         <button class="bnt-cancel"><img src="img/cancelIcon.png" alt=""></button>
             
