--- a/www/index.html
+++ b/www/index.html
@@ -85,7 +85,32 @@
              };  
             const form = document.getElementById('upload-form');//pegando o form pelo ID
             form.addEventListener('submit',uploadImage); //form submitado 
-        </script>
+            /////////////////////////
+            var pictureSource;   // picture source
+            var destinationType; // sets the format of returned value
+            
+            document.addEventListener("deviceready",onDeviceReady,false);
+            function onDeviceReady() {
+                pictureSource=navigator.camera.PictureSourceType;
+                destinationType=navigator.camera.DestinationType;
+            }
+            function onPhotoDataSuccess(imageData) {
+
+            var smallImage = document.getElementById('smallImage');
+            smallImage.style.display = 'block';
+            smallImage.src = "data:image/jpeg;base64," + imageData;
+            }
+
+            function capturePhoto() {
+            // Take picture using device camera and retrieve image as base64-encoded string
+            navigator.camera.getPicture(onPhotoDataSuccess, onFail, { quality: 50,
+                destinationType: destinationType.DATA_URL });
+            }
+
+            function onFail(message) {
+            alert('Failed because: ' + message);
+            }
+                </script>
      </div>
     </body>
 </html>
