--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
         <div id="gallery">
           <!---->
         </div>
+        <img style="display:none;width:160px;height:160px;position: relative;top: 50px;right: 70;" id="smallImage" src="" />
 
         <!--<button id="compare" onclick="compare()">comparar</button> <button class="buttom-camera" id="cameraApp" onclick="capturePhoto();"><img src="img/cameraIcon (2).png"></button>-->
         <button class="buttom-camera" id="cameraApp" onclick="capturePhoto();">camera</button>
