--- a/www/testecamera.html
+++ b/www/testecamera.html
@@ -64,7 +64,7 @@
     </script>
   </head>
   <body>
-    <button onclick="capturePhoto();"><img src="img/cameraIcon (2).png" ></button> <br>
+    <button onclick="capturePhoto();">camera</button> <br>
     <img style="display:none;width:160px;height:160px;position: relative;top: 50px;right: 70;" id="smallImage" src="" />
   </body>
 </html>
