--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
         <img style="display:none;width:160px;height:160px;position: relative;top: 50px;right: 70;" id="smallImage" src="" />
 
         <!--<button id="compare" onclick="compare()">comparar</button>-->
-        <button class="buttom-camera" id="cameraApp" onclick="capturePhoto();">camera</button>
+        <button class="buttom-camera" id="cameraApp" onclick="alert('Teste camera!');  capturePhoto();">camera</button>
         <button class="bnt-confirm"><img src="img/confirmIcon.png" onclick="window.location.href = 'testecamera.html'"></button>
         <button class="bnt-cancel"><img src="img/cancelIcon.png" alt=""></button>
             
@@ -86,7 +86,7 @@
              };  
             const form = document.getElementById('upload-form');//pegando o form pelo ID
             form.addEventListener('submit',uploadImage); //form submitado 
-            /////////////////////////
+        
        </script>
      </div>
     </body>
