Ajustes finais e renomeanção das paginas

--- a/www/testecamera.html
+++ b/www/testecamera.html
@@ -65,6 +65,6 @@
   </head>
   <body>
     <button onclick="camera();">camera</button> <br>
-    <img style="display:none;width:160px;height:160px;position: relative;top: 50px;right: 70;" id="smallImage" src="" />
+    <img id="smallImage"  />
   </body>
 </html>
