--- a/www/comemoracao.html
+++ b/www/comemoracao.html
@@ -19,15 +19,16 @@
           </div>
       </ul>
        <h1>Parabéns!</h1>
-       <p align=center>
+       <p align="center">
          <img id="img-avatar" src="img/avatar.gif" width="100">
        </p>
-      <p>Com a sua coleta foram salvos tartarugas e inumeras especies de animais marinhos !</p>
+      <p>Com a sua coleta foram salvos tartarugas e inúmeras espécies de animais marinhos !</p>
       <p>✨🐬🐠🐢🦀🐳🐙✨</p>
   
         <label class="bnt-action">
           <input type="" id="action" >
-          <button class="btn-voltar"><img src="img/voltar.png" onclick="window.location.href = 'home.html'"></button>
+          <button class="btn-voltar"><img src="img/voltar.png" onclick="window.location.href = 'home.html'" 
+            style="margin: 10px 54px 40px 20px"></button>
       </label>
      </div>
     </body>
