--- a/www/comemoracao.html
+++ b/www/comemoracao.html
@@ -19,6 +19,7 @@
           </div>
       </ul>
        <h1>Parabéns!</h1>
+       <h3>Pontos: 3220</h3>
        <p align="center">
          <img id="img-avatar" src="img/avatar.gif" width="100">
        </p>
